--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -11,8 +11,8 @@
     font-size: 23px;
 }
 .item {
-    background-color: #F0F6FC;
-    border: 1px solid #7FB2E5;
+    // background-color: #F0F6FC;
+    border:3px solid #7FB2E5;
     margin: 10px 0;
 }
 .titolo {
