Fix for asl2-375

--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
@@ -1,17 +1,17 @@
 <ion-header *ngIf="aa && es">
-    <ion-row class="v-center titolo text-semibold">
+    <h1 class="v-center titolo text-semibold">
         <ion-back-button defaultHref="home"></ion-back-button>{{aa.titolo}}
-    </ion-row>
+    </h1>
 </ion-header>
 <br>
 <ion-content>
     <ion-grid *ngIf="aa && es">
         <ion-row>
             <ion-col>
-                <span class="link-presenze v-center" (click)="openPresenze(aa, es)">
+                <a class="link-presenze v-center noUnderLine" href="javascript:void(0);" (click)="openPresenze(aa, es)">
                     <ion-icon class="icon-presenze" src="./assets/icon/it-calendar.svg"></ion-icon>&nbsp;Vedi presenze
                     attività
-                </span>
+                </a>
             </ion-col>
         </ion-row>
         <ion-row>
@@ -89,16 +89,17 @@
             <ion-grid>
                 <ion-row>
                     <ion-col class="float-right">
-                        <ion-icon *ngIf="isRemovable(documento)" name="trash"
-                            class="icon-delete float-right attributes-value"
-                            (click)="showDeleteConfirmationAlert(documento)"></ion-icon>
+                        <a class="noUnderLine" href="javascript:void(0);" (click)="showDeleteConfirmationAlert(documento)">
+                            <ion-icon *ngIf="isRemovable(documento)" name="trash"
+                            class="icon-delete float-right attributes-value"></ion-icon>
+                        </a>                        
                     </ion-col>
                 </ion-row>
                 <ion-row>
                     <ion-col>
                         <span class="attributes">
                             <span class="text-semibold">Nome file:&nbsp;&nbsp;&nbsp;</span>
-                            <a (click)="openDocument(documento)" target="_blank">
+                            <a class="noUnderLine" href="javascript:void(0);" (click)="openDocument(documento)" target="_blank">
                                 {{documento?.nomeFile}}
                             </a>
                         </span>
@@ -129,11 +130,11 @@
         <br>
         <ion-row>
             <div *ngIf="attivita.aa.stato != 'archiviata'" class="button-upload">
-                <span class="label-button" (click)="openDocumentUpload()">
+                <a class="label-button noUnderLine" href="javascript:void(0);" (click)="openDocumentUpload()">
                     <label>Carica documento &nbsp;&nbsp;&nbsp;
                         <ion-icon class="icon" src="./assets/icon/it-upload.svg"></ion-icon>
                     </label>
-                </span>
+                </a>
             </div>
         </ion-row>
     </ion-grid>
