Fix for asl2-374

--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.scss
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.scss
@@ -3,7 +3,7 @@
     font-size: 24px;
 }
 .titolo {
-    color: #0073E6;
+    color: #0066CC;
     font-size: 20px;
     margin: 0px;
 }
@@ -92,7 +92,8 @@
     pointer-events: none;
 }
 .item {
-    background-color:#F0F6FC;
+    // background-color:#F0F6FC;
+    border: 1px solid #707070;
     margin: 5px 0;
 }
 
