--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
@@ -128,9 +128,9 @@
                     <div class="button-delete">
                         <a class="delete-label-button noUnderLine" href="javascript:void(0);"
                             (click)="showDeleteConfirmationAlert(documento)">
-                            <ion-icon class="icon-delete" src="./assets/icon/it-delete.svg"></ion-icon>
-                        </a>&nbsp;&nbsp;&nbsp;
-                        <label class="font-14">Elimina file</label>
+                            <ion-icon class="icon-delete" src="./assets/icon/it-delete.svg"></ion-icon>&nbsp;&nbsp;&nbsp;
+                            <label class="font-14">Elimina file</label>
+                        </a>
                     </div>
                 </ion-row>
             </ion-grid>
