--- a/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.scss
+++ b/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.scss
@@ -3,35 +3,36 @@
     padding-top: 20px;
 }
 .top-bar-titolo {
-    color: #0073E6;
+    color: #004D99;
     font-size: 20px;
+    margin: 0;
 }
 .top-bar-attributes {
-    color: #5C6F82;
+    color: #404040;
     font-size: 14px;
 }
 .top-bar-attributes-values {
-    color: #5C6F82;
+    color: #404040;
     font-size: 14px;    
 }
 .attributes-1 {
-    color: #5C6F82;
+    color: #404040;
     font-size: 16px;
 }
 .attributes-2 {
-    color: #5C6F82;
+    color: #5C6F82!important;
     font-size: 15px;
 }
 .attributes-value-validare {
-    color:orange;
+    color:#404040;
     font-size:  14px;
 }
 .validato {
-    color: #A2ADB8;    
+    color: #707070;    
 }
 .error {
     font-size: 12px;
-    color: #FF667D;
+    color: #D1344C;
     font-style: italic;
 }
 .progress-bar-determinate {
@@ -41,7 +42,7 @@
 }
 .item-container {
     .item {
-        background-color: #E6E9F2;
+        // background-color: #E6E9F2;
     }
     .para {
         text-align: justify;
@@ -50,6 +51,7 @@
     .text-area {
         align-content: left;
         width: 100%;
+        height: 40px;
         background: #F0F6FC;    
         border: none;
         font-size: 14px;
