--- a/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.scss
+++ b/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.scss
@@ -1,31 +1,32 @@
 
 .top-bar-titolo {
-    color: #0073E6;
+    color: #004D99;
     font-size: 20px;
+    margin: 0;
 }
 .top-bar-attributes {
-    color: #5C6F82;
+    color: #404040;
     font-size: 14px;
 }
 .top-bar-attributes-values {
-    color: #5C6F82;
+    color: #404040;
     font-size: 14px;    
 }
 .titolo {
-    color: #5C6F82;
+    color: #404040;
     font-size: 16px;
 }
 .attributes {
-    color: #5C6F82;
+    color: #404040;
     font-size: 18px;
 }
 .attributes-value-validare {
-    color:orange;
+    color:#404040;
     font-size:  14px;
 }
 .error {
     font-size: 12px;
-    color: #FF667D;
+    color: #D1344C;
     font-style: italic;
 }
 .validato {
