--- a/src/app/tab1/actions/credits/credits.page.html
+++ b/src/app/tab1/actions/credits/credits.page.html
@@ -7,7 +7,7 @@
   <br>
   <ion-row>
     <ion-col size="4"></ion-col>
-    <ion-col size="2">
+    <ion-col size="2" class="text-center">
       <a target="_blank" href="http://www.provincia.tn.it/">
         <img role="none" src="./assets/image/provinciaTN.png" class="footer-imgTN">
       </a>&nbsp;&nbsp;
@@ -20,7 +20,7 @@
     <ion-col size="4"></ion-col>
   </ion-row>
   <br>
-  <p class="text-center p1">Copyright Smart Communities 2020 Fondazione Bruno Kessler e Provincia Autonoma di Trento</p>
+  <p class="text-center p1">Copyright Smart Communities 2020<br />Fondazione Bruno Kessler<br />Provincia Autonoma di Trento</p>
   <br>
   <p class="text-center p1 text-semibold">Questa applicazione è stata progettata tramite un percorso di co-design con
     studenti dei seguenti istituti:</p>
@@ -29,4 +29,10 @@
     Gregorio Fontana <span class="text-italic">(Rovereto)</span><br>Collegio Arcivescovile Celestino Endrici <span
       class="text-italic">(Trento)</span><br>Istituto Martino Martini<br><span
       class="text-italic">(Mezzolombardo)</span></p>
+  <br>
+  <p class="text-center p1 text-semibold">I seguenti enti hanno collaborato al percorso di coprogettazione:</p>
+  <br>
+  <p class="text-center p1">Fondazione Bruno Kessler<br />Trentino Sviluppo, Studio Piras,<br />Cooperativa Sociale Kaleidoscopio e<br />Università degli Studi di Trento</p>
+  <br>
+  <p class="text-center p1 text-semibold">Il logo è stato realizzato tramite un percorso di Alternanza Scuola Lavoro dall’Istituto Pavoniano Artigianelli per le arti grafiche</p>
 </ion-content>
