--- a/src/app/tab3/actions/documento-upload-modal/document-upload-modal.component.html
+++ b/src/app/tab3/actions/documento-upload-modal/document-upload-modal.component.html
@@ -5,6 +5,7 @@
     <span class="text-semibold">dimensione massima 10MB</span>
 </ion-header>
 <ion-content padding>
+    <span>dimensione massima 10MB</span>
     <div *ngIf="!fileSelected">
         <ion-grid>
             <a class="noUnderLine" href="javascript:void(0);" (click)="create(1)">
