--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -66,6 +66,15 @@
         <a class="blue" [routerLink]="['../credits']">Credits</a>
       </span>
     </ion-row>
+    <br>
+    <br>
+    <ion-row>
+      <span class="font-18">
+        <a class="blue" target="_blank" href="assets/terms/informativa-privacy-EDIT.pdf">Privacy</a>
+      </span>
+    </ion-row>
+    <br>
+    <br>
     <ion-row>
       <ion-col size="4"></ion-col>
       <ion-col size="4" class="text-center">
