--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,6 +3,15 @@
   <br>
   <ion-grid class="container">
     <ion-row>
+      <ion-col size="3"></ion-col>
+      <ion-col size="6">
+        <span class="text-center">
+          <ion-icon role="none" class="icon" src="./assets/icon/placeholder_studenti.svg"></ion-icon>
+        </span>        
+      </ion-col>
+      <ion-col size="3"></ion-col>
+    </ion-row>
+    <ion-row>
       <ion-col>
         <span>
           <ion-row>
@@ -13,7 +22,6 @@
         </span>
       </ion-col>
     </ion-row>
-    <br>
     <ion-row>
       <ion-col>
         <span>
@@ -22,37 +30,39 @@
       </ion-col>
     </ion-row>
     <br>
-    <ion-row *ngIf="dataService.phone">
-      <ion-col>
-        <span class="font-18">{{dataService.phone}}</span>
+    <ion-row class="blue-line-divider"></ion-row>
+    <br>
+    <ion-row>
+      <ion-col size="4"><span class="font-14">Telefono:</span></ion-col>
+      <ion-col size="6">
+        <span *ngIf="dataService.phone" class="font-14">{{dataService.phone}}</span>
+        <a *ngIf="!dataService.phone" class="noUnderLine v-center blue" href="javascript:void(0);" (click)="showPhoneInput()">
+          Inserisci numero
+        </a>
+      </ion-col>
+      <ion-col size="2">
+        <a class="noUnderLine v-center blue" *ngIf="dataService.phone" href="javascript:void(0);" (click)="showPhoneInput()">
+          <ion-icon role="none" title="telefono" class="icon-edit" src="./assets/icon/it-pencil.svg"></ion-icon>
+        </a>      
+      </ion-col>  
+    </ion-row>
+    <br>
+    <ion-row>      
+      <ion-col size="4"><span class="font-14">Email:</span></ion-col>
+      <ion-col size="6">
+        <span *ngIf="dataService.email" class="font-14">{{dataService.email}}</span>
+        <a *ngIf="!dataService.email" class="noUnderLine v-center blue" href="javascript:void(0);" (click)="showEmailInput()">
+          Inserisci indirizzo email
+        </a>
+      </ion-col>
+      <ion-col size="2">
+        <a class="noUnderLine v-center blue" *ngIf="dataService.email" href="javascript:void(0);" (click)="showEmailInput()">
+          <ion-icon role="none" title="email" class="icon-edit" src="./assets/icon/it-pencil.svg"></ion-icon>
+        </a>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <span class="font-13">
-        <a class="noUnderLine v-center blue" href="javascript:void(0);" (click)="showPhoneInput()">
-          <ion-icon role="none" title="titolo" class="icon-edit" src="./assets/icon/it-pencil.svg"></ion-icon>
-          &nbsp;&nbsp;
-          Modifica numero di telefono
-        </a>
-      </span>
-    </ion-row>
     <br>
-    <ion-row *ngIf="dataService.email">
-      <ion-col>
-        <span class="font-18">{{dataService.email}}</span>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <span class="font-13">
-        <a class="noUnderLine v-center blue" href="javascript:void(0);" (click)="showEmailInput()">
-          <ion-icon role="none" title="titolo" class="icon-edit" src="./assets/icon/it-pencil.svg"></ion-icon>
-          &nbsp;&nbsp;
-          Modifica indirizzo email
-        </a>
-      </span>
-    </ion-row>
-    <br>
-    <br>
+    <ion-row class="blue-line-divider"></ion-row>
     <br>
     <ion-row>
       <span class="font-18">
@@ -60,21 +70,18 @@
       </span>
     </ion-row>
     <br>
-    <br>
     <ion-row>
       <span class="font-18">
         <a class="blue" [routerLink]="['../credits']">Credits</a>
       </span>
     </ion-row>
     <br>
-    <br>
     <ion-row>
       <span class="font-18">
         <a class="blue" target="_blank" href="assets/terms/informativa-privacy-EDIT.pdf">Privacy</a>
       </span>
     </ion-row>
-    <br>
-    <br>
+    <!-- <br> -->
     <ion-row>
       <ion-col size="4"></ion-col>
       <ion-col size="4" class="text-center">
